crates/compiler/codegen/tests/snapshots/codegen_tests__aggregates_return_struct.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: return_struct.cm
============================================================
Source code:
struct Point{
    x: felt,
    y: felt,
}

func return_struct() -> Point {
    let p = Point{x: 2, y: 3};
    return p;
}

============================================================
Generated CASM:
return_struct:
return_struct:
return_struct_0:
   0: 6 2 _ 0              // [fp + 0] = 2
   1: 6 3 _ 1              // [fp + 1] = 3
   2: 4 0 _ -4             // Return value 0: [fp -4] = [fp + 0]
   3: 4 1 _ -3             // Return value 0: [fp -3] = [fp + 1]
   4: 15 _ _ _             // return
