crates/compiler/codegen/tests/snapshots/codegen_tests__aggregates_struct_access_mut.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: struct_access_mut.cm
============================================================
Source code:
//!ASSERT CONTAINS: getelementptr
//!ASSERT CONTAINS: store

// Tests writing a value to a struct field.
struct Point {
    x: felt,
    y: felt,
}

func test() -> felt {
    let p = Point { x: 10, y: 20 };
    p.y = 30; // Should generate getelementptr followed by a store.
    return p.y;
}

============================================================
Generated CASM:
test:
   0: 6 10 _ 0             // [fp + 0] = 10
   1: 6 20 _ 1             // [fp + 1] = 20
   2: 6 30 _ 1             // [fp + 1] = 30
   3: 4 1 _ 2              // [fp + 2] = [fp + 1]
   4: 4 2 _ -3             // Return value 0: [fp -3] = [fp + 2]
   5: 15 _ _ _             // return
