crates/compiler/codegen/tests/snapshots/codegen_tests__functions_different_types.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: different_types.cm
============================================================
Source code:
struct Point{
    x: felt,
    y: felt,
}


func different_types(p: Point, x: felt) -> (felt, Point){
    let p2 = p;
    p2.x = x;
    return (x, p2);
}

============================================================
Generated CASM:
different_types:
different_types:
different_types_0:
   0: 4 -8 _ 0             // Store: [fp + 0] = [fp + -8]
   1: 4 -7 _ 1             // Store: [fp + 1] = [fp + -7]
   2: 4 -6 _ 0             // [fp + 0] = [fp + -6]
   3: 4 -6 _ -5            // Return value 0: [fp -5] = [fp + -6]
   4: 4 0 _ -4             // Return value 1: [fp -4] = [fp + 0]
   5: 4 1 _ -3             // Return value 1: [fp -3] = [fp + 1]
   6: 15 _ _ _             // return
