crates/compiler/codegen/tests/snapshots/codegen_tests__structs_simple_struct.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: simple_struct.cm
============================================================
Source code:
struct Point {
    x: felt,
    y: felt,
}

fn main() -> felt {
    let p = Point { x: 10, y: 20 };
    return p.x;
}
============================================================
Generated CASM:
main:
   0: 9 10 -3 _            // Return value 0: [fp -3] = 10
   1: 11 _ _ _             // return
